Archive2/91/9542d2a8b86911/output
main.cpp:1:26: error: missing default argument on parameter 'j'
void foo(int i = 42, int j);
                         ^
1 error generated.
